Fixed #36873 -- Aligned and normalized stroke width for non-multiple select icons in related-widget-wrapper.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -18,6 +18,10 @@
     vertical-align: 0;
 }
 
+.form-row select option:checked {
+    background-color: var(--selected-row);
+}
+
 form .form-row p {
     padding-left: 0;
 }
@@ -186,7 +190,6 @@ form .aligned select + div.help {
 }
 
 form .aligned select option:checked {
-    background-color: var(--selected-row);
     color: var(--body-fg);
 }
 
